--- a/PC/Wpf_UrControlExample/MainWindow.xaml
+++ b/PC/Wpf_UrControlExample/MainWindow.xaml
@@ -21,6 +21,9 @@
         <Button x:Name="btn_record" Content="record" HorizontalAlignment="Left" Margin="462,136,0,0" VerticalAlignment="Top" Width="80" Height="61" Click="Btn_record_Click"/>
         <Button x:Name="btn_write" Content="write" HorizontalAlignment="Left" Margin="547,136,0,0" VerticalAlignment="Top" Width="80" Height="61" Click="Btn_write_Click"/>
         <Button x:Name="btn_endRecord" Content="end" HorizontalAlignment="Left" Margin="632,136,0,0" VerticalAlignment="Top" Width="80" Height="61" Click="Btn_endRecord_Click"/>
+        <Button x:Name="btn_goFile" Content="go file" HorizontalAlignment="Left" Margin="467,224,0,0" VerticalAlignment="Top" Width="245" Height="30" Click="Btn_goFile_Click"/>
+        <Button x:Name="btn_Rmovep" Content="Rmovep" HorizontalAlignment="Left" Margin="115,150,0,0" VerticalAlignment="Top" Width="66" Height="47" Click="Btn_Rmovep_Click"/>
+        <Button x:Name="btn_Rmovej" Content="Rmovej" HorizontalAlignment="Left" Margin="115,202,0,0" VerticalAlignment="Top" Width="66" Height="47" Click="Btn_Rmovej_Click"/>
 
     </Grid>
 </Window>
