--- a/PC/Wpf_UrControlExample/MainWindow.xaml
+++ b/PC/Wpf_UrControlExample/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Wpf_UrControlExample"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="450" Width="965.6">
     <Grid>
         <Button x:Name="btn_startServer" Content="start server" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="100" Height="63" Click="Btn_startServer_Click"/>
         <Button x:Name="btn_gripper" Content="gripper" HorizontalAlignment="Left" Margin="10,97,0,0" VerticalAlignment="Top" Width="100" Height="48" Click="Btn_gripper_Click"/>
@@ -29,6 +29,49 @@
         <Label x:Name="lb_clientPos" Content="(0,0,0)" HorizontalAlignment="Left" Margin="550,224,0,0" VerticalAlignment="Top" FontSize="20"/>
         <Button x:Name="btn_clientForce" Content="client force" HorizontalAlignment="Left" Margin="364,274,0,0" VerticalAlignment="Top" Width="181" Height="46" Click="Btn_clientForce_Click"/>
         <Label x:Name="lb_clientForce" Content="(0,0,0)" HorizontalAlignment="Left" Margin="550,282,0,0" VerticalAlignment="Top" FontSize="20"/>
+        <TabControl HorizontalAlignment="Left" Height="400" Margin="633,10,0,0" VerticalAlignment="Top" Width="316">
+            <TabItem Header="Path control">
+                <Grid Background="#FFE5E5E5">
+                    <Button x:Name="btn_openPathFile" Content="Open Path File" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="101" Height="46" Click="Btn_openPathFile_Click"/>
+                    <ListView x:Name="LV_pathData" HorizontalAlignment="Left" Height="239" Margin="10,72,0,0" VerticalAlignment="Top" Width="274">
+                        <ListView.ItemContainerStyle>
+                            <Style TargetType="ListViewItem">
+                                <Setter Property="HorizontalContentAlignment" Value="Stretch" />
+                            </Style>
+                        </ListView.ItemContainerStyle>
+                        <ListView.View>
+                            <GridView>
+
+                                <GridViewColumn  Header="c" Width="30" >
+                                    <GridViewColumn.CellTemplate>
+                                        <DataTemplate>
+                                            <Grid Background="Transparent">
+                                                <CheckBox IsChecked="{Binding isChecked}"/>
+                                            </Grid>
+                                        </DataTemplate>
+                                    </GridViewColumn.CellTemplate>
+                                </GridViewColumn>
+
+                                <GridViewColumn  Header="Col1" Width="80" >
+                                    <GridViewColumn.CellTemplate>
+                                        <DataTemplate>
+                                            <Grid Background="Transparent">
+                                                <TextBlock Text="{Binding Col1}" Foreground="{Binding Color1}"/>
+                                            </Grid>
+                                        </DataTemplate>
+                                    </GridViewColumn.CellTemplate>
+                                </GridViewColumn>
+
+                            </GridView>
+                        </ListView.View>
+
+                    </ListView>
+                </Grid>
+            </TabItem>
+            <TabItem Header="TabItem">
+                <Grid Background="#FFE5E5E5"/>
+            </TabItem>
+        </TabControl>
 
     </Grid>
 </Window>
