add user control

--- a/PC/Wpf_UrControlExample/MainWindow.xaml
+++ b/PC/Wpf_UrControlExample/MainWindow.xaml
@@ -4,10 +4,11 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Wpf_UrControlExample"
+        xmlns:control ="clr-namespace:WpfCustomControl_UrRobot;assembly=WpfCustomControl_UrRobot"
         mc:Ignorable="d"
-        Title="MainWindow" Height="569" Width="965.6">
+        Title="MainWindow" Height="569" Width="1107.6">
     <Grid>
-        <Button x:Name="btn_startServer" Content="start server" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="110" Height="63" Click="Btn_startServer_Click"/>
+        <Button x:Name="btn_startServer" Content="start server" HorizontalAlignment="Left" Margin="10,24,0,0" VerticalAlignment="Top" Width="110" Height="36" Click="Btn_startServer_Click"/>
         <Button x:Name="btn_gripper" Content="gripper" HorizontalAlignment="Left" Margin="10,97,0,0" VerticalAlignment="Top" Width="100" Height="48" Click="Btn_gripper_Click"/>
         <TextBox x:Name="tb_grip" TextAlignment="Center" VerticalContentAlignment="Center" HorizontalAlignment="Left" Height="48" Margin="115,97,0,0" TextWrapping="Wrap" Text="0" VerticalAlignment="Top" Width="44"/>
         <TextBox x:Name="tb_grip_f" TextAlignment="Center" VerticalContentAlignment="Center" HorizontalAlignment="Left" Height="48" Margin="164,97,0,0" TextWrapping="Wrap" Text="0" VerticalAlignment="Top" Width="44"/>
@@ -92,6 +93,8 @@
         <TextBox x:Name="tb_jog4" TextAlignment="Center" VerticalContentAlignment="Center" HorizontalAlignment="Left" Height="38" Margin="247,422,0,0" TextWrapping="Wrap" Text="0" VerticalAlignment="Top" Width="44"/>
         <TextBox x:Name="tb_jog5" TextAlignment="Center" VerticalContentAlignment="Center" HorizontalAlignment="Left" Height="38" Margin="291,422,0,0" TextWrapping="Wrap" Text="0" VerticalAlignment="Top" Width="44"/>
         <TextBox x:Name="tb_jog6" TextAlignment="Center" VerticalContentAlignment="Center" HorizontalAlignment="Left" Height="38" Margin="335,422,0,0" TextWrapping="Wrap" Text="0" VerticalAlignment="Top" Width="44"/>
+        <control:UserControl_UrRobot HorizontalAlignment="Left" Height="438" Margin="790,76,0,0" VerticalAlignment="Top" Width="312"/>
+
 
     </Grid>
 </Window>
