--- a/PC/Wpf_UrControlExample/MainWindow.xaml
+++ b/PC/Wpf_UrControlExample/MainWindow.xaml
@@ -93,8 +93,7 @@
         <TextBox x:Name="tb_jog4" TextAlignment="Center" VerticalContentAlignment="Center" HorizontalAlignment="Left" Height="38" Margin="247,422,0,0" TextWrapping="Wrap" Text="0" VerticalAlignment="Top" Width="44"/>
         <TextBox x:Name="tb_jog5" TextAlignment="Center" VerticalContentAlignment="Center" HorizontalAlignment="Left" Height="38" Margin="291,422,0,0" TextWrapping="Wrap" Text="0" VerticalAlignment="Top" Width="44"/>
         <TextBox x:Name="tb_jog6" TextAlignment="Center" VerticalContentAlignment="Center" HorizontalAlignment="Left" Height="38" Margin="335,422,0,0" TextWrapping="Wrap" Text="0" VerticalAlignment="Top" Width="44"/>
-        <control:UserControl_UrRobot HorizontalAlignment="Left" Height="438" Margin="790,76,0,0" VerticalAlignment="Top" Width="312"/>
-
+        <control:UserControl_UrRobot Margin="740,14,10,24"   ></control:UserControl_UrRobot>
 
     </Grid>
 </Window>
