--- a/PC/Wpf_UrControlExample/MainWindow.xaml
+++ b/PC/Wpf_UrControlExample/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:Wpf_UrControlExample"
         xmlns:control ="clr-namespace:WpfCustomControl_UrRobot;assembly=WpfCustomControl_UrRobot"
         mc:Ignorable="d"
-        Title="MainWindow" Height="569" Width="1107.6">
+        Title="MainWindow" Height="584" Width="1383.1">
     <Grid>
         <Button x:Name="btn_startServer" Content="start server" HorizontalAlignment="Left" Margin="10,24,0,0" VerticalAlignment="Top" Width="110" Height="36" Click="Btn_startServer_Click"/>
         <Button x:Name="btn_gripper" Content="gripper" HorizontalAlignment="Left" Margin="10,97,0,0" VerticalAlignment="Top" Width="100" Height="48" Click="Btn_gripper_Click"/>
@@ -93,7 +93,8 @@
         <TextBox x:Name="tb_jog4" TextAlignment="Center" VerticalContentAlignment="Center" HorizontalAlignment="Left" Height="38" Margin="247,422,0,0" TextWrapping="Wrap" Text="0" VerticalAlignment="Top" Width="44"/>
         <TextBox x:Name="tb_jog5" TextAlignment="Center" VerticalContentAlignment="Center" HorizontalAlignment="Left" Height="38" Margin="291,422,0,0" TextWrapping="Wrap" Text="0" VerticalAlignment="Top" Width="44"/>
         <TextBox x:Name="tb_jog6" TextAlignment="Center" VerticalContentAlignment="Center" HorizontalAlignment="Left" Height="38" Margin="335,422,0,0" TextWrapping="Wrap" Text="0" VerticalAlignment="Top" Width="44"/>
-        <control:UserControl_UrRobot Margin="740,14,10,24"   ></control:UserControl_UrRobot>
+        <control:UserControl_UrRobot Margin="954,9,28,46"   ></control:UserControl_UrRobot>
+        <Button x:Name="btn_connectClient2" Content="connect client" HorizontalAlignment="Left" Margin="428,379,0,0" VerticalAlignment="Top" Width="181" Height="44" Click="Btn_connectClient2_Click"/>
 
     </Grid>
 </Window>
